--- a/XAI_Assignment_2_Adversarial_Patches.ipynb
+++ b/XAI_Assignment_2_Adversarial_Patches.ipynb
@@ -523,7 +523,7 @@
         "def save_patch_as_image(patch_tensor, filename):\n",
         "    # Convert the patch tensor into a savable format (e.g., from tensor to image)\n",
         "    patch_np = patch_tensor.detach().cpu().numpy()\n",
-        "    patch_np = (patch_np - patch_np.min()) / (patch_np.max() - patch_np.min())  # 归一化到0-1之间\n",
+        "    patch_np = (patch_np - patch_np.min()) / (patch_np.max() - patch_np.min())  \n",
         "    patch_np = (patch_np * 255).astype(np.uint8)  # Convert to 8-bit integer\n",
         "\n",
         "    # Dimension transformation, from (C, H, W) to (H, W, C)\n",
