使用 Colab 创建而成

--- a/Assignment_3_Interpretable_ML.ipynb
+++ b/Assignment_3_Interpretable_ML.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+sqB6AXiNSSFR810TeGt3",
+      "authorship_tag": "ABX9TyNLEbPrmJQU3J0+kSgsh6cF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,6 +33,16 @@
       ],
       "metadata": {
         "id": "DpEiv7EYe8l0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Please download the dataset from this URL: https://www.kaggle.com/datasets/blastchar/telco-customer-churn/data  \n",
+        "and **upload** it to the current working environment."
+      ],
+      "metadata": {
+        "id": "a-copAHQqsJU"
       }
     },
     {
