--- a/assignment5/Assignment_5_Explainable_Techniques.ipynb
+++ b/assignment5/Assignment_5_Explainable_Techniques.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOS9qJpCZ+jNg+Reqg9F5/Y",
+      "authorship_tag": "ABX9TyMwhDreOGUQTrHNSabbvT+V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -124,7 +124,7 @@
         "id": "B4XSHAa8v03l",
         "outputId": "b2605b42-ed25-4191-fea9-e9e847482749"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,7 +165,7 @@
       "metadata": {
         "id": "vHjXY0lIv9f2"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -186,7 +186,7 @@
       "metadata": {
         "id": "YtRTW4DSa9Zr"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -225,7 +225,7 @@
         "id": "_RDkIp7-bJCU",
         "outputId": "64721fd9-c845-4c70-a9b7-9abc7e3f556e"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -74492,6 +74492,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "While the beginning praises the strong start and well-developed characters, the middle of the text shifts to a more negative tone, mentioning that the story becomes slow, dragging, and repetitive. The ending is described as rushed and unsatisfying, yet the overall theme of love, loss, and redemption is handled well."
+      ],
+      "metadata": {
+        "id": "Nyqekrr2-geG"
+      }
     },
     {
       "cell_type": "markdown",
